Polishing frontend interface

--- a/httpServer/ui/scss/components/_index.scss
+++ b/httpServer/ui/scss/components/_index.scss
@@ -1,5 +1,10 @@
+@import 'icon';
 @import 'alert';
 @import 'box';
+@import 'single-value-display';
+@import 'form';
+@import 'option-toggle';
+@import 'btn';
 
 @import 'main-sidebar';
 
