--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -7,9 +7,19 @@ $b: 'page-dashboard';
     &__header {
         box-shadow: 0 1px 5px rgba(#000, 0.25);
         padding: 1rem;
-        color: get-gray-color();
+        color: get-gray-color('light');
         position: relative;
         z-index: 1;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__timing-info {
+        margin-left: auto;
+        margin-right: 3rem;
+        font-weight: $font-weight-bold;
+        line-height: 1.1;
     }
 
     &__body {
