--- a/httpServer/ui/scss/config/_typo.scss
+++ b/httpServer/ui/scss/config/_typo.scss
@@ -1,4 +1,4 @@
-$font-family-base:                  sans-serif !default;
+$font-family-base:                  'Roboto', sans-serif !default;
 $font-family-alt:                   sans-serif !default;
 
 $font-size-small:                   0.75rem !default; // 12px
@@ -11,7 +11,7 @@ $font-size-h2:                      1.5rem !default; //24px
 $font-size-h3:                      1.125rem !default; //18px
 
 $font-weight-regular:               400 !default;
-$font-weight-bold:                  800 !default;
+$font-weight-bold:                  700 !default;
 
 $line-height-base:                  1.6 !default;
 $line-height-computed:              floor(($font-size-base * $line-height-base)) !default;
