--- a/httpServer/ui/scss/layout/_master-layout.scss
+++ b/httpServer/ui/scss/layout/_master-layout.scss
@@ -1,8 +1,12 @@
 $b: 'master-layout';
 
 .#{$b} {
-    display: flex;
     min-height: 100vh;
+    display: flex;
+
+    // @include media-breakpoint-up('sm') {
+    //     display: flex;
+    // }
 
     &__content {
         flex: 1 1 auto;
