--- a/httpServer/ui/scss/layout/_master-layout.scss
+++ b/httpServer/ui/scss/layout/_master-layout.scss
@@ -10,6 +10,7 @@ $b: 'master-layout';
 
     &__content {
         flex: 1 1 auto;
+        padding: 2rem;
 
         > * {
             height: 100%;
