Add PEEP, I/E and Trigger pak value.
Still need to connect with real values.

--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -10,6 +10,12 @@ $b: 'single-value-display';
     display: flex;
     align-items: center;
 
+    &-static {
+        > * {
+            padding: 1rem;
+        }
+    }
+
     &-big-column {
         width: 70%;
     }
