--- a/httpServer/ui/scss/components/_main-sidebar.scss
+++ b/httpServer/ui/scss/components/_main-sidebar.scss
@@ -23,6 +23,7 @@ $b: 'main-sidebar';
         flex-direction: column;
         list-style-type: none;
         padding: 0;
+        margin: 0;
     }
 
     &__menu-item {
