--- a/httpServer/ui/scss/config/_paths.scss
+++ b/httpServer/ui/scss/config/_paths.scss
@@ -1,3 +1,3 @@
-$asset-path:        '../' !default;
+$asset-path:        '/' !default;
 $image-url-path:    $asset-path + 'images/' !default;
 $font-url-path:     $asset-path + 'fonts/' !default;
