Proposed setup for UI of ward overview

--- a/httpServer/ui/scss/components/_btn.scss
+++ b/httpServer/ui/scss/components/_btn.scss
@@ -24,6 +24,7 @@ $b: 'btn';
     text-transform: uppercase;
     cursor: pointer;
     position: relative;
+    text-decoration: none;
 
     &::before {
         content: '‹';
