--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -53,7 +53,7 @@ $b: 'single-value-display';
         flex-wrap: wrap;
 
         > * {
-            flex: 1 1 1 calc(33% - 2rem);
+            flex: 1 1 calc(33% - 2rem);
         }
     }
 }
