make logging plugin for the hapi server and write logs to mongo

--- a/httpServer/ui/scss/components/_index.scss
+++ b/httpServer/ui/scss/components/_index.scss
@@ -2,6 +2,7 @@
 @import 'alert';
 @import 'box';
 @import 'single-value-display';
+@import 'logs-table';
 @import 'form';
 @import 'table';
 @import 'option-toggle';
