--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -11,6 +11,7 @@ $b: 'single-value-display';
     flex-wrap: wrap;
     align-items: center;
     user-select: none;
+    width: 30rem;
 
     &__data {
         flex: 1 1 16rem;
