--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -27,11 +27,22 @@ $b: 'page-dashboard';
     &__machine-info {
         button {
             color: #FFF;
-            width: 3rem;
-            height: 3rem;
-            line-height: 3rem;
+            height: 3.2rem;
+            line-height: 1.5rem;
+            font-size: 1.5em;
             margin: 0rem;
-            padding: 0;
+            padding: 0 0.5rem 0 0.5rem;
+
+            svg {
+                display: inline-block;
+                height: 1em;
+                vertical-align: middle;
+            }
+
+            span {
+                margin-left: 0.25em;
+                vertical-align: middle;
+            }
 
             &.running {
                 background-color: rgb(180, 3, 3);
@@ -47,9 +58,51 @@ $b: 'page-dashboard';
         }
     }
 
-    &__body {
-        padding: 1rem;
+    &__layout {
         background-color: #f8f9fc;
         flex: 1 0 auto;
+        flex-grow: 1;
+
+        display: flex;
+        flex-flow: row nowrap;
+
+        &__body {
+            display: flex;
+            flex-direction: column;
+            padding: 1rem;
+            flex-grow: 1;
+
+            &__measurements {
+                display: flex;
+                flex-direction: row;
+
+                &__graphs {
+                    flex-grow: 1;
+                    margin-right: 1rem;
+                }
+
+                &__settings {
+                    width: 30rem;
+                    flex-grow: 0;
+                }
+            }
+        }
+
+        &__sidebar {
+            position: relative;
+            padding: 1rem;
+            background-color: #31708f;
+            color: white;
+            display: flex;
+            flex-flow: row nowrap;
+            flex-grow: 0;
+            width: 5rem;
+
+            button {
+                border: 1px solid white;
+                padding: 1rem;
+                border-radius: 4px;
+            }
+        }
     }
 }
