--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -21,6 +21,7 @@ $b: 'page-dashboard';
             background-color: darkred;
             border-radius: 4px;
             padding: 1rem;
+            vertical-align: middle;
         }
     }
 
