seperate alarm limits from other settings

--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -86,4 +86,8 @@ $b: 'single-value-display';
         font-size: 2rem;
         margin-right: 0.2rem;
     }
+
+    &__alarm {
+        background-color: #ff6600;
+    }
 }
