--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -78,7 +78,7 @@ $b: 'page-dashboard';
 
                 &__graphs {
                     flex-grow: 1;
-                    margin-right: 1rem;
+                    margin-left: 1rem;
                 }
 
                 &__settings {
