--- a/httpServer/ui/scss/layout/_master-layout.scss
+++ b/httpServer/ui/scss/layout/_master-layout.scss
@@ -2,6 +2,7 @@ $b: 'master-layout';
 
 .#{$b} {
     min-height: 100vh;
+    height: 100%;
     display: flex;
 
     // @include media-breakpoint-up('sm') {
