--- a/httpServer/ui/scss/base/_general.scss
+++ b/httpServer/ui/scss/base/_general.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    height: 100%;
 
     *, *::before, *::after {
         box-sizing: inherit;
@@ -13,6 +14,11 @@ body {
     font-size: $font-size-base;
     line-height: $line-height-base;
     color: $text-color;
+    height: 100%;
+}
+
+#__next {
+    height: 100%;
 }
 
 ::-moz-selection {
