--- a/httpServer/ui/scss/components/pages/_history.scss
+++ b/httpServer/ui/scss/components/pages/_history.scss
@@ -47,5 +47,24 @@ $b: 'page-history';
 
     &__graphs {
         flex-grow: 1;
+
+        display: flex;
+        flex-flow: column nowrap;
+
+        &__controls {
+            display: flex;
+            flex-flow: row nowrap;
+
+            button {
+                flex-grow: 0;
+                vertical-align: middle;
+            }
+
+            div {
+                flex-grow: 1;
+                text-align: center;
+                vertical-align: middle;
+            }
+        }
     }
 }
