define 3d layout for buttons and add new navigation menu

--- a/httpServer/ui/scss/base/_general.scss
+++ b/httpServer/ui/scss/base/_general.scss
@@ -7,6 +7,14 @@ html {
     }
 }
 
+button {
+    text-transform: uppercase;
+}
+
+*:focus {
+    outline: none;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
