--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -15,25 +15,13 @@ $b: 'single-value-display';
         flex: 1 1 16rem;
     }
 
-    &__settings {
-        flex-basis: 18rem;
-        margin: -1rem;
-    }
-
     &__value {
-        font-size: 3.0rem;
-        font-family: monospace;
+        font-size: 4.5rem;
         cursor: pointer;
     }
 
-    &--default {
-        background-color: get-status-color('info');
-        color: #fff;
-    }
-
     &--normal {
-        background-color: get-status-color('success');
-        color: #fff;
+        color: get-gray-color('dark');
     }
 
     &--warning {
@@ -41,7 +29,7 @@ $b: 'single-value-display';
         color: #333;
     }
 
-    &--alarm {
+    &--danger {
         background-color: get-status-color('danger');
         color: #fff;
     }
@@ -50,7 +38,6 @@ $b: 'single-value-display';
         padding: 0;
         align-items: flex-start;
         flex-wrap: wrap;
-        border: 1px solid #fff;
 
         > * {
             flex: 1 1 calc(33% - 2rem);
@@ -59,15 +46,15 @@ $b: 'single-value-display';
 }
 
 .#{$b}-settings {
-    margin: 1rem;
-
-    &__name {
-        margin-bottom: 0;
-    }
+    margin: 1rem 0rem;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
 
     &__controls {
         font-family: monospace;
         display: flex;
+        flex-flow: column nowrap;
         align-items: center;
         margin: -0.25rem;
         text-transform: none;
@@ -75,17 +62,85 @@ $b: 'single-value-display';
     }
 
     &__control {
-        background-color: #fff;
-        width: 3rem;
-        height: 3rem;
-        line-height: 3rem;
-        margin: 0.25rem;
+        background-color: get-brand-color('primary', 'lighter-10');
+        width: 4rem;
+        height: 4rem;
+        line-height: 4rem;
+        margin: 0.5rem;
+
+        border: 1px solid get-brand-color('primary', 'lighter-10');
+        position: relative;
+        color: white;
+
+        &::before {
+            display: block;
+            position: absolute;
+            height: calc(2px + 100%);
+            width: 8px;
+            background-color: get-brand-color('primary', 'lighter-15');
+            content: '';
+            top: 3px;
+            left: -9px;
+            transform: skewY(-45deg);
+        }
+
+        &::after {
+            display: block;
+            position: absolute;
+            width: calc(2px + 100%);
+            height: 8px;
+            background-color: get-brand-color('primary', 'lighter-20');
+            content: '';
+            top: calc(100% + 1px);
+            left: -5px;
+            transform: skewX(-45deg);
+        }
+
+        &:hover {
+            transform: translate(-4px, 4px);
+
+            &::before {
+                height: calc(2px + 100%);
+                width: 4px;
+                top: 1px;
+                left: -5px;
+            }
+    
+            &::after {                
+                width: calc(3px + 100%);
+                height: 4px;
+                top: calc(100% + 1px);
+                left: -3px;
+                transform: skewX(-45deg);
+            }
+        }
+
+        &:hover {
+            outline: none;
+        }
     }
 
     &__value {
-        font-size: 2rem;
-        margin-right: 0.2rem;
+        flex-grow: 1;
+        text-align: end;
+        margin-right: 1rem;
+
+        &__name {
+            margin-bottom: 0;
+            font-size: 0.9rem;
+        }
+
+        &__unit {
+            margin-bottom: 0;
+            font-size: 0.9rem;
+        }
+
+        &__value {
+            font-size: 3.5rem;
+            line-height: 3.5rem;
+        }
     }
+    
 
     &__alarm {
         background-color: #ff6600;
