--- a/httpServer/ui/scss/components/pages/_dashboard.scss
+++ b/httpServer/ui/scss/components/pages/_dashboard.scss
@@ -27,12 +27,54 @@ $b: 'page-dashboard';
 
     &__machine-info {
         button {
-            color: #FFF;
+            color: white;
             height: 3.2rem;
             line-height: 1.5rem;
             font-size: 1.5em;
             margin: 0rem;
-            padding: 0 0.5rem 0 0.5rem;
+            padding: 0 1rem 0 0.5rem;
+            border-radius: 0;
+            border: 0;
+            position: relative;
+
+            &::before {
+                display: block;
+                position: absolute;
+                height: 100%;
+                width: 8px;
+                background-color: white;
+                content: '';
+                top: 4px;
+                left: -8px;
+                transform: skewY(-45deg);
+            }
+
+            &::after {
+                display: block;
+                position: absolute;
+                width: 100%;
+                height: 8px;
+                background-color: white;
+                content: '';
+                top: 100%;
+                left: -4px;
+                transform: skewX(-45deg);
+            }
+
+            &:hover {
+                transform: translate(-4px, 4px);
+
+                &::before {
+                    top: 2px;
+                    left: -4px;
+                    width: 4px;
+                }
+
+                &::after {                    
+                    height: 4px;
+                    left: -2px;
+                }
+            }
 
             svg {
                 display: inline-block;
@@ -46,11 +88,29 @@ $b: 'page-dashboard';
             }
 
             &.running {
-                background-color: rgb(180, 3, 3);
+                background-color: get-status-color('danger');
+                text-shadow: 0px -1px 0px get-status-color('danger', 'light');
+
+                &::before {
+                    background-color: get-status-color('danger', 'lighter-2');
+                }
+
+                &::after {
+                    background-color: get-status-color('danger', 'lighter-10');
+                }
             }
 
             &.inactive {
-                background-color: rgb(3, 131, 41);
+                background-color: get-status-color('success');
+                text-shadow: 0px -1px 0px get-status-color('success', 'light');
+
+                &::before {
+                    background-color: get-status-color('success', 'lighter-2');
+                }
+
+                &::after {
+                    background-color: get-status-color('success', 'lighter-10');
+                }
             }
         }
 
@@ -82,42 +142,85 @@ $b: 'page-dashboard';
                 }
 
                 &__settings {
-                    width: 30rem;
+                    width: 14rem;
                     flex-grow: 0;
 
                     .save-button {
-                        margin: 0rem;
-                        margin-top: 1rem;
-                        color: rgb(3, 131, 41);
+                        color: white;
                         height: 3.2rem;
                         line-height: 1.5rem;
                         font-size: 1.5em;
+                        margin: 0rem;
+                        padding: 0 1rem 0 0.5rem;
+                        border-radius: 0;
+                        border: 0;
+                        position: relative;
                         width: 100%;
-                        padding: 0 0.5rem 0 0.5rem;
-                        text-transform: uppercase;
-                        border: 1px solid rgb(3, 131, 41);
-                        border-radius: 4px;
-                        background-color: rgba(3, 131, 41, 0.5);
-
-                        &:disabled {
-                            background-color: #DDD;
-                            color:darkgray;
-                            border: 1px solid darkgray;
+                        background-color: get-status-color('success');
+                        text-shadow: 0px -1px 0px get-status-color('success', 'light');
+            
+                        &::before {
+                            display: block;
+                            position: absolute;
+                            height: 100%;
+                            width: 8px;
+                            background-color: get-status-color('success', 'lighter-2');
+                            content: '';
+                            top: 4px;
+                            left: -8px;
+                            transform: skewY(-45deg);
+                        }
+            
+                        &::after {
+                            display: block;
+                            position: absolute;
+                            width: 100%;
+                            height: 8px;
+                            background-color: get-status-color('success', 'lighter-10');
+                            content: '';
+                            top: 100%;
+                            left: -4px;
+                            transform: skewX(-45deg);
+                        }
+            
+                        &:hover {
+                            transform: translate(-4px, 4px);
+            
+                            &::before {
+                                top: 2px;
+                                left: -4px;
+                                width: 4px;
+                            }
+            
+                            &::after {                    
+                                height: 4px;
+                                left: -2px;
+                            }
                         }
             
                         svg {
                             display: inline-block;
-                            height: 1rem;
+                            height: 1em;
                             vertical-align: middle;
-
-                            path {
-                                fill: #333;
-                            }
                         }
             
                         span {
-                            margin-left: 0.25rem;
+                            margin-left: 0.25em;
                             vertical-align: middle;
+                        }
+            
+                        &:disabled {
+                            background-color: get-gray-color('base');
+                            text-shadow: 0px -1px 0px get-gray-color('light');
+                            color: white;
+            
+                            &::before {
+                                background-color: get-gray-color('darker');
+                            }
+            
+                            &::after {
+                                background-color: get-gray-color('light');
+                            }
                         }
                     }
                 }
@@ -127,13 +230,11 @@ $b: 'page-dashboard';
         &__sidebar {
             position: relative;
             padding: 0;
-            background-color: get-status-color('success');
-            color: white;
-            display: flex;
-            flex-flow: row nowrap;
+            border-left: 1px solid get-gray-color('light');
             flex-grow: 0;
-            width: 8rem;
+            width: 12rem;
             overflow-x: hidden;
+            text-align: end;
         }
     }
 }
