--- a/httpServer/ui/scss/components/_single-value-display.scss
+++ b/httpServer/ui/scss/components/_single-value-display.scss
@@ -51,6 +51,10 @@ $b: 'single-value-display';
     flex-flow: row nowrap;
     align-items: center;
 
+    &:first {
+        margin-top: 0px;
+    }
+
     &__controls {
         font-family: monospace;
         display: flex;
@@ -62,62 +66,10 @@ $b: 'single-value-display';
     }
 
     &__control {
-        background-color: get-brand-color('primary', 'lighter-10');
         width: 4rem;
         height: 4rem;
         line-height: 4rem;
         margin: 0.5rem;
-
-        border: 1px solid get-brand-color('primary', 'lighter-10');
-        position: relative;
-        color: white;
-
-        &::before {
-            display: block;
-            position: absolute;
-            height: calc(2px + 100%);
-            width: 8px;
-            background-color: get-brand-color('primary', 'lighter-15');
-            content: '';
-            top: 3px;
-            left: -9px;
-            transform: skewY(-45deg);
-        }
-
-        &::after {
-            display: block;
-            position: absolute;
-            width: calc(2px + 100%);
-            height: 8px;
-            background-color: get-brand-color('primary', 'lighter-20');
-            content: '';
-            top: calc(100% + 1px);
-            left: -5px;
-            transform: skewX(-45deg);
-        }
-
-        &:hover {
-            transform: translate(-4px, 4px);
-
-            &::before {
-                height: calc(2px + 100%);
-                width: 4px;
-                top: 1px;
-                left: -5px;
-            }
-    
-            &::after {                
-                width: calc(3px + 100%);
-                height: 4px;
-                top: calc(100% + 1px);
-                left: -3px;
-                transform: skewX(-45deg);
-            }
-        }
-
-        &:hover {
-            outline: none;
-        }
     }
 
     &__value {
