--- a/httpServer/ui/scss/base/_3dbtn.scss
+++ b/httpServer/ui/scss/base/_3dbtn.scss
@@ -6,6 +6,10 @@ $threedsize: 8;
     border: 0;
     position: relative;
 
+    &.offset-effect-x {
+        margin-left: #{$threedsize}px;
+    }
+
     &::before {
         display: block;
         position: absolute;
@@ -72,6 +76,20 @@ $threedsize: 8;
         }
     }
 
+    &.warning {
+        color: white;
+        background-color: get-status-color('warning');
+        text-shadow: 0px -1px 0px get-status-color('warning', 'light');
+
+        &::before {
+            background-color: get-status-color('warning', 'lighter-2');
+        }
+
+        &::after {
+            background-color: get-status-color('warning', 'lighter-10');
+        }
+    }
+
     &.success {
         color: white;
         background-color: get-status-color('success');
@@ -100,3 +118,41 @@ $threedsize: 8;
         }
     }
 }
+
+.#{$b}--horizontal-group {
+    .#{$b} {
+        &:not(:last-child) { 
+            &.danger {
+                border-right: 1px solid get-status-color('danger', 'lighter-10');
+                
+                &::after {
+                    border-right: 1px solid get-status-color('danger', 'lighter-10');
+                }
+            }
+        }
+    }
+
+    .#{$b} {
+        &:not(:first-child) { 
+            &.danger {
+                border-left: 1px solid get-status-color('danger', 'lighter-10');
+                
+                &::after {
+                    border-left: 1px solid get-status-color('danger', 'lighter-10');
+                }
+            }
+        }
+    }
+
+    .button-1 {
+        z-index: 100;
+    }
+
+    .button-2 {
+        z-index: 99;
+    }
+
+    .button-3 {
+        z-index: 98;
+    }
+} 
