define informative alarm messages

--- a/httpServer/ui/scss/components/_alarm-overview.scss
+++ b/httpServer/ui/scss/components/_alarm-overview.scss
@@ -91,6 +91,7 @@ $b: 'alarm-overview';
 
             ul {
                 padding-left: 1rem;
+                padding-right: 1rem;
 
                 li {
                     list-style-type: none;  
