popout for settings

--- a/httpServer/ui/scss/base/_3dbtn.scss
+++ b/httpServer/ui/scss/base/_3dbtn.scss
@@ -49,6 +49,10 @@ $threedsize: 8;
         }
     }
 
+    &.pressed.light-up {
+        color: get-brand-color('secondary');
+    }
+
     &.base {
         color: white;
         background-color: get-brand-color('primary', 'lighter-10');
